--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 log/*.log
 pkg/
 rdoc/*
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/node_modules/
-test/dummy/yarn-error.log
-test/dummy/storage/
-test/dummy/tmp/
+db/*.sqlite3
+spec/dummy/db/*.sqlite3
+spec/dummy/db/*.sqlite3-journal
+spec/dummy/log/*.log
+spec/dummy/node_modules/
+spec/dummy/yarn-error.log
+spec/dummy/storage/
+spec/dummy/tmp/
