Add `appraisal` to verify older Rails versions

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ rdoc/*
 db/*.sqlite3
 coverage/*
 tmp/*
+gemfiles/vendor/*
 spec/dummy/db/*.sqlite3
 spec/dummy/db/*.sqlite3-journal
 spec/dummy/log/*.log
